# foresight

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  virtual-packages.yml
cloud/: Pulumi.yaml  __main__.py  bootstrap_instance.py  supervisord.conf  supervisord_dask.conf
docs/: _book.yml  _quarto.yml  _website.yml  chapter_01.qmd  chapter_02.qmd  chapter_03.qmd  cpa.qmd  index.qmd
docs/hes_final/: article.qmd  bibliography.bibtex  figs.ipynb  presentation.qmd  umap_reduced_2d.feather
docs/hes_final/planning/: group_four_dag.mmd  group_four_gantt.mmd
src/foresight/: __init__.py  dagster.yaml  example.env  workspace.yaml
src/foresight/Analysis/: Model_Anlysis.py
src/foresight/EDA/: ACLED_EDA.py  GDELT_EDA.py
src/foresight/Models/: Ingestion_Pipeline.py  Neural_Net_Models.py
src/foresight/Training_Pipeline/: TFRecord_pipeline.py  pipeline.py  stacking_pipeline.py
src/foresight/dags/: __init__.py  ingestion.py  ingestion_dask.py  ingestion_pandas.py  ingestion_polars.py  io_dask.py  io_pandas.py  io_polars.py  parquet_io_manager.py  repositories.py  utils.py
src/foresight/dags/ingestion/: assets.py  resources.py
src/foresight/notebooks/: binary_classifiers.py  create_mean_embeddings_spike_dataset.py  gdelt_sample_processing.py  modeling_with_real_data.py  modeling_with_sample_data.py  monthly_emb_means_per_country.py  reading_parquet_extracting_locations.py  timeseries_models.py
