[tool.poetry]
name = "foresight"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "foresight", from = "src" },
]

[tool.poetry.dependencies]
python = "~3.10"
torch = "1.13.1"
pandas = "1.5.2"
pyarrow = "10.0.1"
conda-lock = "^1.3.0"

dagster="~1.1.0"
seaborn="~0.12.2"
scikit-learn="~1.2.0"
gcsfs="2022.11.0"
openpyxl = "^3.0.10"
dagit = "^1.1.10"
universal-pathlib = "^0.0.21"
darts = { version = "^0.23.1", markers = "platform_machine == 'x86_64'" }
paramiko = "^3.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "*"
jupyterlab = "*"
dask = "*"
dask-labextension = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
